# Nemulator

./: .gitignore  Cargo.toml  LICENSE.md  README.md  scratch.py
prg_tests/cpu_tests/: expected_log.txt
prg_tests/cpu_tests/cpu_dummy_writes/: readme.txt
src/: app.rs  lib.rs  main.rs  nes.rs
src/app/: app.rs  app.rs.orig  draw.rs  mod.rs  util.rs
src/cartridge/: cartridge.rs  mapper.rs  mod.rs  reader.rs
src/cartridge/mappers/: mapper0.rs  mapper1.rs  mapper2.rs  mapper3.rs  mapper4.rs  mapper9.rs  mod.rs
src/drawer/: mod.rs  test_drawer.rs
src/graphics/: debug_drawer.rs  mod.rs  util.rs  window.rs
src/old_app/: mod.rs  nes_app.rs  util.rs
src/system/: apu.rs  apu_util.rs  audio.rs  bus.rs  controller.rs  cpu.rs  instructions.rs  mem.rs  mod.rs  nes.rs  nes_graphics.rs  ppu.rs  ppu_util.rs  test.txt
