[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

[features]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.6.2"
env_logger = "*"
gilrs = "0.10.7"
log = "*"
pixels = "0.13.0"
rodio = "0.18.1"
tokio = { version = "1.38.0", features = ["full"] }
winit = {version = "0.30.0", features = ["rwh_05"]}
