[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

[features]
debug = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
biquad = "0.4.2"
bitfield-struct = "0.6.2"
env_logger = "*"
gilrs = "0.10.7"
hound = "3.5.1"
image = "0.25.1"
log = "*"
pixels = "0.13.0"
rodio = "0.18.1"
serde_json = "1.0.117"
winit = {version = "0.30.0", features = ["rwh_05"]}


[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
